--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
             <nav>
-                <ul>
+                <ul id="menu">
                     <li>
-                        <a href="">Home</a>
+                        <a href="">Sign up</a>
                     </li>
                     <li>
                         <a href="">Gallery</a>
                     </li>
                     <li>
-                        <a href="">Sign up</a>
+                        <a href="" class="active">Home</a>
                     </li>
                 </ul>
             </nav>
