--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
             </nav>
         </a>
     </header>
-    <section>Main Image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix park</h3>
+        </div>
+    </section>
     <section>Club Ethos</section>
     <section>Running location, distances and times</section>
     <footer>social links here</footer>
