--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
             <h3>Dublin Docklands & Phoenix park</h3>
         </div>
     </section>
-    <section>Club Ethos</section>
+    <section id="club-ethos">
+        <h1>Why love running whit us?</h1>
+        <div id="left-about">left</div>
+        <div id="right-about">right</div>
+        <div id="center-about">center</div>
+    </section>
     <section>Running location, distances and times</section>
     <footer>social links here</footer>
 </body>
